fixed on safari

--- a/src/scss/components/pigment-sheet.scss
+++ b/src/scss/components/pigment-sheet.scss
@@ -52,6 +52,8 @@
 	margin: 0 2.5%;
 	display: flex;
 	flex-direction: column;
+	display: flex;
+  	display: -webkit-box;
 	section {
 		display: flex;
 		flex-direction: column;
